    * Additional HTML5 video formats (mp4, webm, ogv) automatically included, if exist.
    * Better dynamic video re-sizing to fit area, based on inputted aspect ratio.
    * Progressive loading for longer videos.
* Improvement: Design enhancements for default post showcase display.
* Improvement: Design enhancements for Magnific Popup lightbox navigation.
* Improvement: Better mobile fallback for parallax background images.
* Improvement: Redesign of Team Member element.
* Improvement: With a hero unit, when selecting to bold text, a header tag will now be used, allowing for more flexibility in fonts used.
* Improvement: Added option to shade slider images for overlaid text readability; this applies to post slider and simple slider elements.
* Improvement: More default spacing between elements in custom layouts.
* Updated: FontAwesome to 4.5.
* Updated: FlexSlider to 2.6.
* Fixed: Sticky menu logo shouldn't get `srcset` from main header logo.
* Fixed: Accordion feature not working with Toggles element of Layout Builder.
* Fixed: When setting an element to pull from a list of pages, the total number of pages returned shouldn't be interfered with.
* Fixed: Contact Bar element was outputting the set of icons twice.
* Fixed: SPAN HTML tags showing in texture browser.
* Fixed: When `themeblvd_tabs_deep_linking` is filtered to true, tab content wasn't changing properly.
* Fixed: More minor RTL bug fixes.
    * Frontend post grid/showcase filtering and masonry now aligns correctly to the right.
    * Tabs and pills of Tabs element now align properly to right.
    * Panels no longer force text to be aligned left.
    * Pricing table columns now display in correct order, from right-to-left.
    * Progress bars now display and animate out from right.
    * "Custom CSS" option code editor on theme options page now works with RTL.

--------------------------------------------------------------

2.0.4 - 12/11/2015
------------------
